2003-06-25  Matt Keenan <matt.keenan@sun.com>

	* battstat_applet.c, properties.c 
	fix bug #115945, compilation problem with apm.h on SuSE

2003-06-15  Kevin Vandersloot

	* battstat_applet.c: Bind double click/enter/space to suspend.

2003-06-03  Kevin Vandersloot

	* battstat_applet.c: Expand the applet for Fitt's law

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* battstat_applet.glade:  HIGify the action area of the preferences
	dialog.
	* properties.c:  Remove the gtk_dialog_add_button() function calls.  
	The close and help buttons are now in the glade file.

2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* battstat_applet.glade, properties.c: HIGify the preferences dialog.
	Also, added a help button and hooked it up.
	
	* GNOME_BattstatApplet.xml:  Add missing stock icon.
 
2003-04-24  Kevin Vandersloot <kfv101@psu.edu>

	* acpi-linux.c: Hanlde gracefully when acpi directories don't exist. Patch
	from Manuel Clos. Fixes bug #111089

2003-03-12  Alex Duggan  <aldug@astrolinux.com>

	* battstat_applet.c: fix typo, s/show/shows/  Fixes #104028

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* battstat_applet.c: (help_cb): update for screen-exec changes.

2003-03-04  Kevin Vandersloot <kfv101@psu.edu>

	* docs/ja/Makefile.am: fix build from patch by Malcolm
	Tredinnick

2003-03-02  Takeshi AIHANA <aihana@gnome.gr.jp>

	* docs/ja/*: Added new documents for GNOME 2.2 translated by
	KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* docs/Makefile.am: added ja into SUBDIRS.

2003-01-25 John Fleck <jfleck@inkstain.net>

	* docs/C/battstat.xml
	fixing typo, bug #104340

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* battstat_applet.c (destroy_applet): Destroy the
	preferences dialog when destroying the applet.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_BattstatApplet.server.in.in: added bugzilla attributtes

2002-12-08  Kevin Vandersloot <kfv101@psu.edu>
