@@ -145,7 +145,7 @@
 			      <property name="column_spacing">12</property>
 
 			      <child>
-				<widget class="GtkLabel" id="label8">
+				<widget class="GtkLabel" id="yellow_label">
 				  <property name="visible">True</property>
 				  <property name="label" translatable="yes">_Yellow:</property>
 				  <property name="use_underline">True</property>
@@ -170,7 +170,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkLabel" id="label9">
+				<widget class="GtkLabel" id="orange_label">
 				  <property name="visible">True</property>
 				  <property name="label" translatable="yes">_Orange:</property>
 				  <property name="use_underline">True</property>
@@ -195,7 +195,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkLabel" id="label10">
+				<widget class="GtkLabel" id="red_label">
 				  <property name="visible">True</property>
 				  <property name="label" translatable="yes">_Red:</property>
 				  <property name="use_underline">True</property>
@@ -283,7 +283,7 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkLabel" id="label11">
+				<widget class="GtkLabel" id="preview_label">
 				  <property name="visible">True</property>
 				  <property name="label" translatable="yes">_Preview:</property>
 				  <property name="use_underline">True</property>
@@ -589,7 +589,7 @@
 			  <property name="spacing">12</property>
 
 			  <child>
-			    <widget class="GtkLabel" id="label6">
+			    <widget class="GtkLabel" id="suspend_label">
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Suspend command:</property>
 			      <property name="use_underline">True</property>
