@@ -1,3 +1,7 @@
+Wed Jul 09 14:15:44 2003  George Lebl <jirka@5z.com>
+
+	* properties.c, battstat_applet.glade: respect key writability
+
 2003-06-25  Matt Keenan <matt.keenan@sun.com>
 
 	* battstat_applet.c, properties.c 
